tests/snapshots/compiler_error_fixtures/named_field_type_diverges_e467.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/named_field_type_diverges_e467.flx
== compile ==
failed (compile)
== diagnostics ==
error[E467]: Divergent Field Types Across Variants

Field `id` has inconsistent types across variants of `Item` (`String` in `Product`, `Int` in `User`).

  examples/compiler_errors/named_field_type_diverges_e467.flx:16:5
   |
16 |     u.id
   |     ^^^^
== stdout ==
<not executed>
